# AOI---Autonomous-Operations-Intelligence

./: .replit  AWS_CREDENTIALS_DIAGNOSIS.md  AWS_INTEGRATION_STATUS.md  BACKEND_SETUP.md  DEPLOYMENT_COMPLETE.md  FRONTEND_INTEGRATION_STATUS.md  Idea.md  QUICKSTART.md  README.md  RUN_BACKEND_FOR_LIVE_DATA.md  START_LIVE_DATA.md  SUCCESS_SUMMARY.md  SYSTEM_STATUS.md  TESTING_GUIDE.md  check_live_data.sh  design_guidelines.md  list_bedrock_models.py  pyproject.toml  replit.md  run_backend.py  sample_data.json  start.sh  start_python_backend.sh  start_services.sh  tailwind.config.ts  test_aws_services.py  test_bedrock_connection.py  test_inference_profile.py  test_specific_model.py
attached_assets/: Pasted-Create-a-fully-autonomous-self-operating-AI-system-for-Managed-Service-Providers-MSPs-using-AWS-B-1761939676970_1761939676972.txt  Pasted-rno-111-code-ECONNREFUSED-syscall-connect-address-127-0-0-1-port-8000--1762011524497_1762011524499.txt
client/: index.html
client/src/: index.css
client/src/components/: ActivityLogItem.tsx  AgentCard.tsx  ConnectionStatus.tsx  DecisionLogItem.tsx  EscalationCard.tsx  (+5 more)
python_backend/: aws_config.py  data_generator.py  main.py  start_backend.sh
python_backend/agents/: __init__.py  base_agent.py  bedrock_agents.py  decision_agent.py  financial_agent.py  learning_agent.py  lifecycle_agent.py  monitoring_agent.py  orchestrator.py  resource_agent.py  security_agent.py  strands_orchestrator.py  websocket_manager.py
python_backend/routes/: activity.py  agents.py  decisions.py  metrics.py  predictions.py
server/: index.ts  routes.ts
(+16 files in other folders)
