[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "boto3>=1.40.64",
    "fastapi>=0.120.4",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "strands-agents>=1.14.0",
    "strands-agents-tools>=0.2.13",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
